k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-worker
  template:
    metadata:
      labels:
        app: weather-worker
    spec:
      containers:
        - name: weather-worker
          image: bagasrinaldi/weather-worker:latest
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "150m"
              memory: "128Mi"
