k8s/redis-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-network-policy
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: weather-api
        - podSelector:
            matchLabels:
              app: weather-worker
      ports:
        - protocol: TCP
          port: 6379
